--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,9 @@ add_executable(embed tools/embed.c)
 set(FONT ${CMAKE_SOURCE_DIR}/flexi-ibm-vga-true.regular.ttf)
 set(FONT_OBJ ${CMAKE_CURRENT_BINARY_DIR}/font${CMAKE_C_OUTPUT_EXTENSION})
 
-add_executable(main src/main.cpp src/assembly.cpp src/editbox.cpp src/editlines.cpp src/compiler.cpp src/processor.cpp ${ENGINGE_SRC} ${FONT_OBJ})
+add_executable(main src/main.cpp src/assembly.cpp src/editbox.cpp
+               src/editlines.cpp src/compiler.cpp src/processor.cpp
+               src/problem.cpp src/processor_gui.cpp ${ENGINGE_SRC} ${FONT_OBJ})
 
 add_custom_command(OUTPUT ${FONT_OBJ} ${PROJECT_SOURCE_DIR}/tools/font.h
         COMMAND embed ARGS ${FONT} -H ${PROJECT_SOURCE_DIR}/tools/font.h -o ${FONT_OBJ} -smono_font
